--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "storybook",
   "version": "1.0.0",
   "description": "App to share Public or wright prvate story",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "author": "Jeevanth",
   "license": "ISC",
